@@ -1,3 +1,9 @@
+2007-04-30  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Add: src/kahua/thread-pool.scm
+	  New function thread-pool-inc! and thread-pool-dec!, and
+	  change method add into function thread-pool-add-task.
+
 2007-04-28  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Add: src/kahua/config.scm.in
